<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity"
    tools:ignore="MergeRootFrame">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/banner_container_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <LinearLayout
            android:id="@+id/banner_container_start_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="24dp"
        tools:ignore="UselessParent">

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:background="@drawable/button_background"
            android:text="@string/fight_infections"
            android:textColor="@color/textColorSecondary" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_background"
            android:text="@string/boosts_skin_health"
            android:textColor="@color/textColorSecondary" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_background"
            android:text="@string/treats_insomnia"
            android:textColor="@color/textColorSecondary" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_background"
            android:text="@string/good_for_diabetes"
            android:textColor="@color/textColorSecondary" />

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_background"
            android:text="@string/soothing_to_an_upset_stomach"
            android:textColor="@color/textColorSecondary" />

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_background"
            android:text="@string/helps_to_loss_weight"
            android:textColor="@color/textColorSecondary" />

    </LinearLayout>

</RelativeLayout>